[tool.poetry]
name = "prj-template" # Change this to your project name
version = "0.1.0"
description = "" # Change this to your project description
authors = ["Your Name"] # Change this to your name
readme = "README.md" 

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
numpy = "^1.25.2"
polars = "^0.20.23"
scikit-learn = "^1.4.2"
matplotlib = "^3.8.4"
japanize-matplotlib = "^1.1.3"
seaborn = "^0.13.2"
scipy = "^1.13.0"
requests = "^2.31.0"
lightgbm = "^4.3.0"
boto3 = "^1.34.98"
catboost = "^1.2.5"
xgboost = "^2.0.3"
optuna = "^3.6.1"
openai = "^1.25.1"
langchain = "^0.1.17"
mecab-python3 = "^1.0.9"
streamlit = "^1.34.0"
statsmodels = "^0.14.2"
gensim = "^4.3.2"
prophet = "^1.1.5"
mlflow = "^2.12.1"
hydra-core = "^1.3.2"
opencv-python = "^4.9.0.80"
tqdm = "^4.66.4"
pydantic = "^2.7.1"
pandera = "^0.18.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
pytest = "^7.3.2"
ipykernel = "^6.25.1"
mypy = "^1.7.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"